<resources>
    <string name="app_name">Magidor</string>
    <string name="two_one">2-1</string>
    <string name="two_zero">2-0</string>
    <string name="zero_two">0-2</string>
    <string name="one_two">1-2</string>
    <string name="one_zero">1-0</string>
    <string name="zero_one">0-1</string>
    <string name="result_match">%1$d-%2$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opp_deck">Opp. deck</string>
    <string name="play">Play</string>
    <string name="add_a_new_match">Add a new match</string>
    <string name="draw">Draw</string>
    <string name="vs">vs</string>
    <string name="your_deck">Your deck</string>
    <string name="result">Result</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="opponent">Opponent</string>
    <string name="game_winrate">Game winrate:</string>
    <string name="games_lost">Games lost:</string>
    <string name="games_played">Games played:</string>
    <string name="games_won">Games won:</string>
    <string name="_100">100</string>
    <string name="overall_stats">Overall Stats</string>
    <string name="match_winrate">Match winrate:</string>
    <string name="_50">50%</string>
</resources>